[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/scenes/MainMenu/Menu.gd" type="Script" id=1]
[ext_resource path="res://font/light_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://cosmic_shader.tres" type="Material" id=3]
[ext_resource path="res://resource/audio/Music/Technology_Edit02.wav" type="AudioStream" id=4]
[ext_resource path="res://src/scenes/MainMenu/DebugPanel.gd" type="Script" id=5]
[ext_resource path="res://font/new_dynamicfont.tres" type="DynamicFont" id=6]
[ext_resource path="res://src/scenes/FPSCount/FPSCount.tscn" type="PackedScene" id=7]
[ext_resource path="res://resource/themes/FlatUI/kenneyUI.tres" type="Theme" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.194577, 1, 0.188235, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.5
margin_top = -166.0
margin_right = 122.5
margin_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 14
theme = ExtResource( 8 )
custom_constants/separation = 14
alignment = 1

[node name="StartButton" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 65.0
margin_right = 245.0
margin_bottom = 123.251
focus_neighbour_top = NodePath("../QuitButton")
custom_fonts/font = ExtResource( 2 )
text = "START"

[node name="OptionsButton" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 137.0
margin_right = 245.0
margin_bottom = 195.251
custom_fonts/font = ExtResource( 2 )
text = "OPTIONS"

[node name="HelpButton" type="Button" parent="ColorRect/VBoxContainer"]
visible = false
margin_top = 173.0
margin_right = 245.0
margin_bottom = 231.251
custom_fonts/font = ExtResource( 2 )
text = "HELP"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 209.0
margin_right = 245.0
margin_bottom = 267.251
focus_neighbour_bottom = NodePath("../StartButton")
custom_fonts/font = ExtResource( 2 )
text = "QUIT"

[node name="FPS_COUNT" parent="ColorRect" instance=ExtResource( 7 )]
text = ""

[node name="DebugPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -93.0
margin_right = 271.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="DebugPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -313.0
alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -369.5
margin_top = -271.0
margin_right = 369.5
margin_bottom = -200.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "BGMusic"

[connection signal="pressed" from="ColorRect/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
